manifests/clickhouse/clickhouse-routes.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: clickhouse-http
  namespace: data
spec:
  entryPoints:
    - clickhouse-http
  routes:
    - match: HostSNI(`*`)
      services:
        - name: clickhouse
          port: 8123
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: clickhouse-native
  namespace: data
spec:
  entryPoints:
    - clickhouse-native
  routes:
    - match: HostSNI(`*`)
      services:
        - name: clickhouse
          port: 9000
